force-app/main/default/objects/Entrada_de_Estoque__c/Entrada_de_Estoque__c.object-meta.xml
<CustomObject>
    <label>Entrada de Estoque</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entradas de Estoque</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>