force-app/main/default/objects/Entrada_de_Estoque__c/fields/chave_integracao__c.field-meta.xml
<CustomField>
    <fullName>chave_integracao__c</fullName>
    <description>chave integracao</description>
    <externalId>true</externalId>
    <inlineHelpText>cahve integracao</inlineHelpText>
    <label>chave_integracao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>