force-app/main/default/objects/Entrada_de_Estoque__c/fields/CodigoEstoque__c.field-meta.xml
<CustomField>
    <fullName>CodigoEstoque__c</fullName>
    <formula>Estoque__r.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CodigoEstoque</label>
    <type>Text</type>
</CustomField>