force-app/main/default/objects/Entrada_de_Estoque__c/fields/Confirmado__c.field-meta.xml
<CustomField>
    <fullName>Confirmado__c</fullName>
    <label>Confirmado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>