force-app/main/default/objects/Entrada_de_Estoque__c/fields/Disponivel__c.field-meta.xml
<CustomField>
    <fullName>Disponivel__c</fullName>
    <formula>Em_estoque__c - Confirmado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponível</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>