force-app/main/default/objects/Entrada_de_Estoque__c/fields/Em_estoque__c.field-meta.xml
<CustomField>
    <fullName>Em_estoque__c</fullName>
    <label>Em estoque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>