force-app/main/default/objects/Entrada_de_Estoque__c/fields/Estoque__c.field-meta.xml
<CustomField>
    <fullName>Estoque__c</fullName>
    <label>Estoque</label>
    <referenceTo>Estoque__c</referenceTo>
    <relationshipLabel>Entradas de Estoque</relationshipLabel>
    <relationshipName>Entradas_de_Estoque</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>