force-app/main/default/objects/Entrada_de_Estoque__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>