force-app/main/default/objects/Entrada_de_Estoque__c/fields/Posicao_no_deposito__c.field-meta.xml
<CustomField>
    <fullName>Posicao_no_deposito__c</fullName>
    <label>Posição no depósito</label>
    <type>TextArea</type>
</CustomField>