force-app/main/default/objects/Entrada_de_Estoque__c/fields/sap_true__c.field-meta.xml
<CustomField>
    <fullName>sap_true__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sap-true</label>
    <type>Checkbox</type>
</CustomField>